--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,89 +1,149 @@
-@import "https://fonts.googleapis.com/icon?family=Material+Icons";
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+.unactive{
+  display: none !important;
+}
+div{
+  box-sizing: border-box;
+}
+html, body{
+  padding: 0;
+  margin: 0;
+  outline: 0;
 
-body { 
-  font-family: monospace;
-  margin: 0; 
-  font-size: 1.3rem;
-  font-weight: normal;
+  overflow: hidden;
+}
+.wrap{
+  position: relative;
+
+  width: 100vw;
+  height: 100vh;
 }
 
-canvas { 
-  display: block; 
+#c{
+  position: absolute;
+  top:0; left: 0;
+  z-index: -9999;
 }
 
-code {
-  font-family: Consolas,"courier new";
-  color: crimson;
-  background-color: #f1f1f1;
-  padding: 2px;
+.nav{
+  position: absolute;
+  top: 0; left: 0;
+  z-index: 9999;
+
+  width: 100%;
+  padding: 1rem 2rem;
+  box-sizing: border-box;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  color: white;
+}
+.logo{
+  margin-left: 1rem;
+  
+  cursor: pointer;
+}
+.nav_bar{
+  position: relative;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.nav_item{
+  margin: 0 2rem;
+
+  font-family: 'Pretendard-Regular';
+
+  cursor: pointer;
+}
+.nav_item:hover{
+  color:#FF7710;
+  font-weight: 900;
+}
+.underbar{
+  position: absolute;
+  top: 100%; left: 0;
+
+  width: 0;
+  height: 2.5px;
+  background-color: #FF7710;
+
+  transition: all 0.2s ease-in-out;
 }
 
-p {
-  overflow: scroll;
+.contents{
+  position: relative;
+  top : 4rem;
+
+  width: 100%;
+  height: calc(100vh - 4rem);
+  padding: 5rem;
+}
+.textContent{
+  position: relative;
+  top: 50%; transform: translateY(-70%);
+  z-index: 9999;
+
+  color: white;
+  font-family: 'Pretendard-Regular';
+}
+.sub_text{
+  color: #FF7710;
+  margin-left: 0.5rem;
+  font-size: 1.5rem;
+}
+.main_text{
+  font-size: 4rem;
 }
 
-.float {
-	position:fixed;
-	width:60px;
-	height:60px;
-	bottom:40px;
-	right:40px;
-	background-color:#0C9;
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-	box-shadow: 2px 2px 3px #999;
+.applyBtn{
+  position: absolute;
+  bottom: 15%; right: 6rem;
 }
+.btn{
+  width: fit-content;
+  padding:0.5rem 3rem;
 
-.float:hover {
+  border: 2px solid white;
+  border-radius: 3rem;
+
+  color: white;
+  font-family: 'Pretendard-Regular';
+  
   cursor: pointer;
 }
 
-.icon-float{
-	margin-top:18px;
+.btn:hover{
+  color: white;
+  border: 2px solid #FF7710;
+  background-color: #FF7710;
+  
+  font-weight: 900;
 }
 
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
+/* 로그인 스타일 */
+.textContent2{
+  position: relative;
+  top: 50%; transform: translateY(-70%);
+  z-index: 9999;
 
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
-}
-
-.close-modal-btn {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close-modal-btn:hover,
-.close-modal-btn:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-#webgl-error-message {
+  color: white;
+  font-family: 'Pretendard-Regular';
   text-align: center;
-  background: #fff;
-  color: #000;
-  padding: 1.5em;
-  width: 400px;
-  margin: 5em auto 0;
+  font-size: 4rem;
+}
+.loginBtns{
+  position: relative;
+  top: 50%;
+  
+  display: flex;
+  justify-content: space-evenly;
 }
