--- a/templates/apply.html
+++ b/templates/apply.html
@@ -7,8 +7,7 @@
     <title>멋쟁이사자처럼XGNU 11기</title>
     <script src="../src/jquery-3.6.3.min.js"></script>
     <script src="https://kit.fontawesome.com/32afc995e9.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./applystyle.css">
-
+    <link rel="stylesheet" href="../static/styles/applystyle.css">
     <script src="../public/applyevent.js" defer></script>
     <script src="../public/localStorage.js" defer></script>
 </head>
@@ -19,10 +18,10 @@
             <div class="applyhead">
                 <h2>멋쟁이사자처럼 11기 지원신청</h2>
                 <div class="linewrap">
-                    <img src="./images/line1.png" class="line one"/>
-                    <img src="./images/line2.png" class="line two"/>
-                    <img src="./images/line3.png" class="line three"/>
-                    <img src="./images/line4.png" class="line four"/>
+                    <img src="../static/img/line1.png" class="line one"/>
+                    <img src="../static/img/line2.png" class="line two"/>
+                    <img src="../static/img/line3.png" class="line three"/>
+                    <img src="../static/img/line4.png" class="line four"/>
                 </div>
                 <div class="pagination">
                     <div class="box1"></div>
