--- a/static/styles/applystyle.css
+++ b/static/styles/applystyle.css
@@ -114,7 +114,7 @@ textarea::-webkit-scrollbar-track{
     height: 980px;
     margin: 25px auto;
     padding: 0 0 35px 0;
-    background-image: url(./images/background.png);
+    background-image: url(../img/background.png);
     background-size: cover;
     background-color: #ffffff;
 }
