--- a/form/templates/login.html
+++ b/form/templates/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +7,7 @@
     <title>멋쟁이사자처럼XGNU 11기</title>
     <script src="./resource/jquery-3.6.3.min.js"></script>
     <script src="https://kit.fontawesome.com/32afc995e9.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="loginstyles.css"/>
+    <link rel="stylesheet" href="{% static 'styles/loginstyles.css' %}" type="text/css">
 </head>
 <body>
     <header></header>
