--- a/form/templates/login.html
+++ b/form/templates/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>멋쟁이사자처럼XGNU 11기</title>
-    <script src="./resource/jquery-3.6.3.min.js"></script>
+    <script src="{% static 'src/jquery-3.6.3.min.js' %}"></script>
     <script src="https://kit.fontawesome.com/32afc995e9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'styles/loginstyles.css' %}" type="text/css">
 </head>
