--- a/form/templates/update.html
+++ b/form/templates/update.html
@@ -31,16 +31,16 @@
                     <div class="box4"></div>
                 </div>
             </div>
-            <form class="questionbox" action="{% url 'apply' %}" method="post">
+            <form class="questionbox" action="{% url 'update' apply.id %}" method="post">
                 {% csrf_token %}
                 <div class="post">
                     <div class="namE">
                         <label for="name"><span>*</span>  성명</label>
-                        <input type="text" id="name" name="name" />
+                        <input type="text" id="name" name="name" value="{{apply.name}}" />
                     </div>
                     <div class="majoR">
                         <label for="major"><span>*</span>  학번/학과</label>
-                        <input type="text" id="major" name="major" />
+                        <input type="text" id="major" name="major" value="{{apply.major}}" />
                     </div>
                     <div class="gradE">
                         <label for="grade"><span>*</span> 학년</label>
@@ -54,15 +54,15 @@
                     </div>
                     <div class="phonE">
                         <label for="phone"><span>*</span>  연락처</label>
-                        <input type="tel" id="phone" name="phone" />
+                        <input type="tel" id="phone" name="phone" value="{{apply.phone}}" />
                     </div>
                     <div class="emaiL">
                         <label for="phone"><span>*</span>  이메일</label>
-                        <input type="email" id="email" name="email" />
+                        <input type="email" id="email" name="email" value="{{apply.email}}" />
                     </div>
                     <div class="giT">
                         <label for="git">깃허브주소</label>
-                        <input type="text" id="git" name="git" />
+                        <input type="text" id="git" name="git" value="{{apply.git}}" />
                     </div>
                     <hr class="im">
                     <div class="personaL">
@@ -88,7 +88,7 @@
                 <div class="post">
                     <div class="q1">
                         <label for="question1">1. 다양한 IT동아리 중에서 멋쟁이사자처럼 대학 11기를 선택하고 지원하시게 된 이유를 작성해주세요. (500자 이내)</label><br/>
-                        <textarea name="question1" id="question1" maxlength="500" tabindex = "-1"></textarea>
+                        <textarea name="question1" id="question1" maxlength="500" tabindex = "-1">{{apply.question1}}</textarea>
                         <div class="count">
                             <p class="textC1">0</p>
                             <p class="textF1">/ 500</p>
@@ -96,7 +96,7 @@
                     </div>
                     <div class="q2">
                         <label for="question2">2.개발경험 어쩌구 질문</label><br/>
-                        <textarea name="question2" id="question2" maxlength="300" tabindex = "-1"></textarea>
+                        <textarea name="question2" id="question2" maxlength="300" tabindex = "-1">{{apply.question2}}</textarea>
                         <div class="count">
                             <p class="textC2">0</p>
                             <p class="textF2">/ 300</p>
@@ -107,7 +107,7 @@
                     <div class="q3">
                         <label for="question3">3. 멋쟁이사자처럼 대학은 협업과 팀워크를 중요한 가치로 생각하는 공동체입니다. 지원자 본인이 협업과 팀워크를 진행
                             <br/>해보았던 경험과, 그 경험을 멋쟁이 사자처럼 대학에서 어떻게 적용시킬 수 있을지 작성해주세요. (500자 이내)</label><br/>
-                        <textarea name="question3" id="question3" maxlength="500" tabindex = "-1"></textarea>
+                        <textarea name="question3" id="question3" maxlength="500" tabindex = "-1">{{apply.question3}}</textarea>
                         <div class="count">
                             <p class="textC3">0</p>
                             <p class="textF3">/ 500</p>
@@ -115,7 +115,7 @@
                     </div>
                     <div class="q4">
                         <label for="question4">4. 멋쟁이사자처럼 대학은 최소 주 2회 모임 & 10시간 이상의 시간 투자를 권장합니다. 활동 기간동안 얼마나 열정적으<br/>로, 매주 얼만큼의 시간을 할애하실 수 있는지 작성해주세요. (500자 이내)</label><br/>
-                        <textarea name="question4" id="question4" maxlength="500" tabindex = "-1"></textarea>
+                        <textarea name="question4" id="question4" maxlength="500" tabindex = "-1">{{apply.question4}}</textarea>
                         <div class="count">
                             <p class="textC4">0</p>
                             <p class="textF4">/ 500</p>
@@ -125,7 +125,7 @@
                 <div class="post">
                     <div class="q5">
                         <label for="question5">5. 만들고싶은 웹 서비스가 있다면 간단히 소개해주세요.</label><br/>
-                        <textarea name="question5" id="question5" tabindex = "-1"></textarea>
+                        <textarea name="question5" id="question5" tabindex = "-1">{{apply.question5}}</textarea>
                     </div>
                 </div>
                 <div class="btnwrap">
