--- a/form/templates/index.html
+++ b/form/templates/index.html
@@ -47,8 +47,8 @@
           지원서 접수가<br>완료 되었습니다.
         </div>
         <div class="loginBtns loginEle unactive">
-          <div class="btn"><a href="{% url 'update' apply.id %}"><span style="margin-right: 3px;"> < </span>수정하러가기</a></div>
-          <div class="btn"><a href="{% url 'update' apply.id %}">지원 취소하기<span style="margin-left: 3px;"> > </span></a></div>
+          <div class="btn"><span style="margin-right: 3px;"> < </span>수정하러가기</div>
+          <div class="btn">지원 취소하기<span style="margin-left: 3px;"> > </span></div>
         </div>
 
       </div>
