--- a/form/templates/login.html
+++ b/form/templates/login.html
@@ -15,9 +15,7 @@
         <div class="loginwrap">
             <p class="loginTitle">SNS 로그인</p>
             <div class="linewrap">
-                <hr>
-                <p>또는</p>
-                <hr>
+                <img src="{% static 'img/google.png' %}" style="margin:0px">
             </div>
         </div>
     </section>
