--- a/form/templates/apply.html
+++ b/form/templates/apply.html
@@ -10,7 +10,6 @@
     <script src="https://kit.fontawesome.com/32afc995e9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'styles/applystyle.css'%}" type="text/css">
     <script src="{% static 'public/applyevent.js' %}" defer></script>
-    <script src="{% static 'public/localStorage.js' %}" defer></script>
 </head>
 <body>
     <header></header>
@@ -23,7 +22,7 @@
                     <img src="{% static 'img/line2.png' %}" class="line two"/>
                     <img src="{% static 'img/line3.png' %}" class="line three"/>
                     <img src="{% static 'img/line4.png' %}" class="line four"/>
-               </div>
+                </div>
                 <div class="pagination">
                     <div class="box1"></div>
                     <div class="box2"></div>
@@ -129,12 +128,11 @@
                     </div>
                 </div>
                 <div class="btnwrap">
-                    <div class="prevbtn" onclick="togglePrevBtn()">
+                    <div class="prevbtn">
                         <i class="fa-solid fa-angle-left"></i>
                         이전 단계
                     </div>
-                    <div class="savebtn" onclick="toggleSaveBtn()">임시 저장</div>
-                    <div class="nextbtn" onclick="toggleNextBtn()">
+                    <div class="nextbtn">
                         다음 단계
                         <i class="fa-solid fa-angle-right"></i>
                     </div>
