--- a/form/templates/index.html
+++ b/form/templates/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{% static 'styles/main.css' %}" type="text/css">
     <title>경상국립대학교 멋쟁이사자처럼 11기</title>
     <script src="{% static 'public/index.js' %}" defer></script>
+    <script src="{% static 'public/script.js' %}" defer></script>
   </head>
   <body>
     <div class="wrap">
