--- a/static/styles/loginstyles.css
+++ b/static/styles/loginstyles.css
@@ -24,30 +24,49 @@
     font-style: normal;
 }
 
+.wrap{
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+body {
+    overflow: hidden;
+}
+
+#c{
+    position: fixed;
+    top: 0; left: 0;
+    z-index: -9999;
+    overflow: hidden;
+}
 * {
     box-sizing: border-box;
 }
-body {
-    margin: 0 auto;
-    padding: 0px;
-    background-color: #1C1B1A;
-}
-section {
-    width: 1024px;
-    margin: 0 auto;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 p{
     font-family: Pretendard-Regular;
     color: #ffffff;
     font-size: 14px;
+    margin-top: 0px;
 }
+
+section {
+    position: absolute;
+    z-index: 9999;
+
+    top:50%; left: 50%;
+    transform: translate(-50%, -50%);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .loginwrap {
-    width: 535px;
-    height: 371px;
+    position: relative;
+    width: 435px;
+    height: 300px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -55,6 +74,9 @@ p{
     padding: 50px;
     border: 3px solid #ffffff;
     border-radius: 30px;
+    background-color: #1C1B1A;
+    background-color: rgba( 0, 0, 0, 0.5 );
+    justify-content: center;
 }
 .loginTitle {
     font-family: Pretendard-SemiBold;
@@ -70,4 +92,7 @@ p{
 hr {
     width: 195px;
     height: 0px;
+}
+img {
+    cursor: pointer;
 }
