--- a/static/styles/applystyle.css
+++ b/static/styles/applystyle.css
@@ -33,14 +33,14 @@ body {
     background-color: #1C1B1A;
 }
 section {
-    width: 1024px;
+    width: 750px;
     margin: 0 auto;
 }
 h2 {
     font-family: Pretendard-Bold;
-    font-size: 36px;
+    font-size: 32px;
     color:#1C1B1A;
-    margin: 45px 0 10px 0;
+    margin: 35px 0 10px 0;
 }
 p{
     font-family: Pretendard-Regular;
@@ -50,32 +50,32 @@ pre , pre > p {
 }
 label {
     font-family: Pretendard-SemiBold;
-    font-size: 20px;
+    font-size: 16px;
 }
 label > span {
     color: #FF7710;
 }
 input {
-    width: 250px;
-    height: 40px;
+    width: 200px;
+    height: 35px;
     border: 1px solid #D9D9D9;
     border-radius: 6px;
     background-color: #ffffff;
     padding: 0 10px;
-    font-size: 16px;
+    font-size: 14px;
     font-family: Pretendard-Regular;
 }
 input:focus {
     outline: 1px solid #FF7710;
 }
 select {
-    width: 250px;
-    height: 40px;
+    width: 200px;
+    height: 35px;
     border: 1px solid #D9D9D9;
     border-radius: 6px;
     background-color: #ffffff;
     padding: 0 10px;
-    font-size: 16px;
+    font-size: 14px;
     color: #999999;
     font-family: Pretendard-Regular;
 }
@@ -88,14 +88,14 @@ select option {
 }
 textarea {
     resize: none;
-    width: 915px;
-    height: 240px;
+    width: 670px;
+    height: 150px;
     border: 1px solid #FF7710;
     border-radius: 10px;
     font-family: Pretendard-Regular;
     margin: 15px 0 0 0;
     padding: 15px;
-    font-size: 16px;
+    font-size: 14px;
 }
 textarea:focus {
     outline: none;
@@ -110,9 +110,9 @@ textarea::-webkit-scrollbar-track{
     background-color: transparent;
 }
 .applyback {
-    width: 1024px;
-    height: 980px;
-    margin: 25px auto;
+    width: 750px;
+    height: 745px;
+    margin: 0px auto;
     padding: 0 0 35px 0;
     background-image: url(../img/background.png);
     background-size: cover;
@@ -127,8 +127,8 @@ textarea::-webkit-scrollbar-track{
 }
 .post {
     display: block;
-    width: 944px;
-    height: 660px;
+    width: 670px;
+    height: 520px;
     margin: 25px 40px;
     position: relative;
     left: 0px;
@@ -139,12 +139,12 @@ textarea::-webkit-scrollbar-track{
 .post:nth-child(2) {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 .post:nth-child(3){
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
 }
 .post:nth-child(4) {
@@ -153,48 +153,57 @@ textarea::-webkit-scrollbar-track{
     align-items: center;
 }
 /* input정렬 */
+.inputwrap {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 30px;
+}
+.inputwrap:nth-child(1) {
+    padding-top: 15px;
+}
 .namE {
-    width: 400px;
+    width: 310px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 33px;
+    margin-bottom: 15px;
 }
 .majoR {
-    width: 400px;
+    width: 310px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 33px;
+    margin-bottom: 15px;
 }
 .gradE {
-    width: 400px;
+    width: 310px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 33px;
+    margin-bottom: 15px;
 }
 .phonE {
-    width: 400px;
+    width: 310px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 33px;
+    margin-bottom: 15px;
 }
 .emaiL {
-    width: 400px;
+    width: 310px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 33px;
+    margin-bottom: 15px;
 }
 .giT {
-    width: 400px;
+    width: 310px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-left: 15.5px;
-    margin-bottom: 33px;
+    margin-bottom: 15px;
 }
 /* 개인정보동의부분 */
 input#personal {
@@ -207,16 +216,16 @@ input#personal + label {
 input#personal + label::before {
     content:"";
     display: inline-block;
-    width: 16px;
-    height: 16px;
+    width: 12px;
+    height: 12px;
     border: 1px solid #D9D9D9;
     border-radius: 50px;
-    vertical-align:bottom;
+    vertical-align:middle;
 }
 input#personal:checked + label::before {
     content:"";
-    width:16px;
-    height: 16px;
+    width:12px;
+    height: 12px;
     display: inline-block;
     border: 1px solid #D9D9D9;
     background-image: url('../img/check.svg');
@@ -225,18 +234,19 @@ input#personal:checked + label::before {
     background-repeat: no-repeat;
 }
 .personaL {
-    margin: 25px 0 10px 0;
+    margin: 0px 0 10px 0;
+    padding-top: 30px;
 }
 .perwrap {
     margin-bottom: 15px;
-    padding-left: 20px;
+    padding-left: 5px;
 }
 .perstyle {
-    font-size: 16px;
+    font-size: 14px;
     color: #1C1B1A;
 }
 .pertextbox {
-    width:915px;
+    width:670px;
     height: 150px;
     background-color: #ffffff;
     border: 1px solid #D9D9D9;
@@ -245,6 +255,7 @@ input#personal:checked + label::before {
     padding: 20px;
     font-family: Pretendard-Regular;
     overflow:auto;
+    font-size: 12px;
 }
 .pertextbox::-webkit-scrollbar {
     width: 5px;
@@ -258,38 +269,20 @@ input#personal:checked + label::before {
 
 /* 서술질문 */
 .q1 {
-    margin-bottom: 25px;
-}
-.q3 {
-    margin-bottom: 10px;
+    margin: 15px 0;
 }
 .q5 {
     margin-top: 15px;
 }
 
 /* 버튼부분 */
-.savebtn {
-    width: 175px;
-    height: 45px;
-    border: 1px solid #FF7710;
-    background-color: #ffffff;
-    color: #FF7710;
-    font-size: 20px;
-    font-family: Pretendard-Bold;
-    border-radius: 50px;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    margin-left: 20px;
-    cursor: pointer;
-}
 .nextbtn {
-    width: 175px;
-    height: 45px;
+    width: 125px;
+    height: 35px;
     background-color: #FF7710;
     color: #ffffff;
     font-family: Pretendard-Bold;
-    font-size: 20px;
+    font-size: 14px;
     border-radius: 50px;
     display: flex;
     justify-content: center;
@@ -298,12 +291,12 @@ input#personal:checked + label::before {
     cursor: pointer;
 }
 .prevbtn {
-    width: 175px;
-    height: 45px;
+    width: 125px;
+    height: 35px;
     border: 1px solid #FF7710;
     background-color: #ffffff;
     color: #FF7710;
-    font-size: 20px;
+    font-size: 14px;
     font-family: Pretendard-Bold;
     border-radius: 50px;
     display: none;
@@ -313,11 +306,11 @@ input#personal:checked + label::before {
     cursor: pointer;
 }
 .submitbtn {
-    width: 175px;
-    height: 45px;
+    width: 125px;
+    height: 35px;
     background-color: #FF7710;
     color: #ffffff;
-    font-size: 20px;
+    font-size: 14px;
     font-family: Pretendard-Bold;
     border-radius: 50px;
     display: none;
@@ -340,27 +333,26 @@ input#personal:checked + label::before {
     position: relative;
     /* size */
     width: 100%;
-    height: 900px;
 }
 .btnwrap {
     display: flex;
     flex-direction: row;
     justify-content: end;
-    margin-right: 45px;
+    margin-right: 30px;
 
     /* position */
     position: absolute;
     /* 버튼이 중앙에 위치하게 하기위해 계산 */
-    top: 715px;
+    top: 525px;
     right: 0px;
 }
 
 /* 글자수체크 */
 .count {
-    height: 35px;
+    height: 25px;
     display: flex;
     justify-content: end;
-    font-size: 14px;
+    font-size: 10px;
     color: #999999;
     margin: 0px;
 }
@@ -374,7 +366,7 @@ hr{
     margin-left: 12px;
 }
 .im {
-    width: 925px;
+    width: 670px;
     margin: 0 auto;
 }
 
@@ -396,7 +388,7 @@ hr{
     flex-direction: row;
     margin: 0px;
     padding: 0px;
-    height: 85px;
+    height: 55px;
 }
 .line {
     opacity: 0;
@@ -408,57 +400,58 @@ hr{
 .pagination {
     display: flex;
     position: absolute;
-    top: 100px;
+    top: 87px;
     left:0px;
 }
 .box1 {
-    width:20px;
-    height: 20px;
+    width:15px;
+    height: 15px;
     border-radius: 50px;
     background-color: #ebebeb;
     position: absolute;
-    left:171px;
-    top: 32px;
+    left:145px;
+    top: 18px;
     opacity: 1;
     transition: opacity .3s;
 }
 .box2 {
-    width:20px;
-    height: 20px;
+    width:15px;
+    height: 15px;
     border-radius: 50px;
     background-color: #dddddd;
     position: absolute;
-    left:407px;
-    top: 23px;
+    left:305px;
+    top: 14px;
     opacity: 0;
     transition: opacity .3s;
 }
 .box3 {
-    width:20px;
-    height: 20px;
+    width:15px;
+    height: 15px;
     border-radius: 50px;
     background-color: #afafaf;
     position: absolute;
-    left: 714px;
-    top: 48px;
+    left: 512px;
+    top: 27px;
     opacity: 0;
     transition: opacity .3s;
 }
 .box4 {
-    width:20px;
-    height: 20px;
+    width:15px;
+    height: 15px;
     border-radius: 50px;
     background-color: #999999;
     position: absolute;
-    left: 921px;
-    top: 12px;
+    left: 695px;
+    top: 0px;
     opacity: 0;
     transition: opacity .3s;
 }
 
 .notice {
-    font-size: 14px;
+    font-size: 12px;
     margin: 0px;
+    margin-top: 15px;
     padding: 0px;
     color: #999999;
 }
