--- a/form/templates/index.html
+++ b/form/templates/index.html
@@ -13,7 +13,7 @@
     
     <script src="https://kit.fontawesome.com/32afc995e9.js" crossorigin="anonymous"></script>
     <script src="{% static 'public/index.js' %}" defer></script>
-    <script src="{% static 'public/ .js' %}" defer></script>
+    <script src="{% static 'public/script.js' %}" defer></script>
   </head>
   <body>
     <div class="wrap">
